# casebook

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  implementation-decisions.md  vision.md
docs/casebook/: agents.md
docs/casebook/2026-06-20__e854f4f4/: .preamble  case.toml  intro.md  overview.md  post-feedback-implementation-summary.md  round10-home-detail-view-stop-hotkey.md  round11-scratch-sessions-logo-config.md  round2-feedback-naming-model-hotkeys.md  round3-resume-toasts-page-per-case.md  round4-bootstrap-and-ui-polish.md  round5-sidebar-sessions-keyboard-focus.md  round6-configuration-docs.md  round7-trivial-sessions-usage-sizing.md  round8-usage-display-no-cleanup-columns-console.md  round9-home-details-resize-topbar.md
docs/casebook/2026-06-20__f6433da1/: case.toml
docs/casebook/2026-06-22__69cec96c/: case.toml
docs/casebook/2026-06-22__f5f7bdb5/: case.toml  overview.md
docs/casebook/2026-06-24__0f6ff795/: case.toml  overview.md
docs/casebook/2026-06-26__4844cff5/: case.toml  handoff-app-launching-auto-start-and-browser-open.md  handoff-backend-installation-and-configuration-ux.md  handoff-backends-guide-config-reload-and-per-backend-model.md  handoff-settings-page-and-first-time-onboarding.md  overview.md
docs/configuration/: README.md  backends.md  hotkeys.md
src/: main.py
src/casebook/: __init__.py  __main__.py  cases.py  cli.py  config.py  coordinator.py  echo_backend.py  logsetup.py  projects.py  state.py  storage.py  templates.py
src/casebook/engine/: __init__.py  client.py  events.py  oneshot.py  session.py
(+5 files in other folders)
