[project]
name = "casebook"
version = "0.1.0"
description = "A coordinator that connects your filesystem casebook to configurable ACP agent backends."
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "agent-client-protocol>=0.10.1",
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
    "watchfiles>=0.21",
]

[project.scripts]
casebook = "casebook.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/casebook"]
